--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,23 @@
 
 <body>
   <pre>
-    question goes here...
+    Create a stopwatch App with following feature
+    - when App on load, preset the second value to 10
+    - create custom event called "Foo", demonstrate a use of "Foo" event with "alert()" on when App start
+    - Start button: start the timer; change the button text to Pause
+    - Reset button: reset time to 00:00:00
+    - Pause button: stop the timer; change the button text to Resume
+    - Reume button: continue the timer; change the button text to Pause
+
+    requirements:
+    - use React Framework
+    - ES6 javascript
+    - 1 hour
+
+    Code submission:
+    - zip the code source folder
+    - send attachement via email to raymund.tong@nextdigital.com.hk, also paste SHA1 hash of the zip file along the email to prove your the complete time
+
   </pre>
 
 </body>
