--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <pre>
-    Create a stopwatch App with following feature
+    Create a stopwatch App with following feature (preview: https://frozen-oasis-04157.herokuapp.com/demo.png)
     - when App on load, preset the second value to 10
     - create custom event called "Foo", demonstrate a use of "Foo" event with "alert()" on when App start
     - Start button: start the timer; change the button text to Pause
